--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -76,13 +76,8 @@ spec:
     command:
     - cat
     securityContext:
-      runAsUser: 0
-      capabilities:
-        add:
-          - "SYS_ADMIN"
-          - "MKNOD"
-          - "SYS_CHROOT"
-          - "SETFCAP"
+      privileged: true
+      runAsUser: 1000
     tty: true
 
   restartPolicy: Never
