Trying a different security configuration, a more detailed approach would be needed if that was being used on a production cluster.

--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -125,7 +125,7 @@ spec:
                                         --password-stdin \
                                         ${REGISTRY}
 
-                                    podman --runroot /home/jenkins/ --root /home/jenkins pull ${REGISTRY}/${IMAGE}:${LATEST_TAG}
+                                    podman pull ${REGISTRY}/${IMAGE}:${LATEST_TAG}
                                 '''
                             }
                         }
