Trying a different security configuration, a more detailed approach would be needed if that was being used on a production cluster.

--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -76,6 +76,12 @@ spec:
     command:
     - cat
     securityContext:
+      capabilities:
+        add:
+          - "SYS_ADMIN"
+          - "MKNOD"
+          - "SYS_CHROOT"
+          - "SETFCAP"
       privileged: true
       runAsUser: 1000
     tty: true
