Trying a different security configuration, a more detailed approach would be needed if that was being used on a production cluster.

--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -126,7 +126,7 @@ spec:
                                 sh 'aws --version'
                                 sh '''
                                     aws ecr get-login-password --region us-east-2 | \
-                                      podman --storage-driver=vfs --runroot /home/jenkins/ --root /home/jenkins login \
+                                      podman login \
                                         --username AWS \
                                         --password-stdin \
                                         ${REGISTRY}
