--- a/spa-react-netcore-redis/voting/voting/k8s/Chart/templates/network-policy.yaml
+++ b/spa-react-netcore-redis/voting/voting/k8s/Chart/templates/network-policy.yaml
@@ -1,3 +1,15 @@
+---
+apiVersion: networking.k8s.io/v1
+kind: NetworkPolicy
+metadata:
+  name: {{ .Release.Name }}-default-deny-ingress
+spec:
+  podSelector:
+    matchLabels:
+      release: {{ .Release.Name }}
+  policyTypes:
+  - Ingress
+---
 apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
 metadata:
@@ -13,8 +25,21 @@ spec:
     - from:
         - podSelector:
             matchLabels:
-              app: {{ template "favorite-beer.name" . }}-redis
+              app: {{ template "favorite-beer.name" . }}
               release: {{ .Release.Name }}
       ports:
         - protocol: TCP
           port: 6379
+---
+kind: NetworkPolicy
+apiVersion: networking.k8s.io/v1
+metadata:
+  name: {{ template "favorite-beer.fullname" . }}-allow-web
+spec:
+  podSelector:
+    matchLabels:
+      app: {{ template "favorite-beer.name" . }}
+      release: {{ .Release.Name }}
+  ingress:
+  - ports:
+    - port: 8080
