--- a/spa-react-netcore-redis/voting/voting/k8s/Chart/templates/network-policy.yaml
+++ b/spa-react-netcore-redis/voting/voting/k8s/Chart/templates/network-policy.yaml
@@ -9,37 +9,38 @@ spec:
       release: {{ .Release.Name }}
   policyTypes:
   - Ingress
----
-apiVersion: networking.k8s.io/v1
-kind: NetworkPolicy
-metadata:
-  name: {{ template "favorite-beer.fullname" . }}-redis
-spec:
-  podSelector:
-    matchLabels:
-      app: {{ template "favorite-beer.name" . }}-redis
-      release: {{ .Release.Name }}
-  policyTypes:
-    - Ingress
-  ingress:
-    - from:
-        - podSelector:
-            matchLabels:
-              app: {{ template "favorite-beer.name" . }}
-              release: {{ .Release.Name }}
-      ports:
-        - protocol: TCP
-          port: 6379
----
-kind: NetworkPolicy
-apiVersion: networking.k8s.io/v1
-metadata:
-  name: {{ template "favorite-beer.fullname" . }}-allow-web
-spec:
-  podSelector:
-    matchLabels:
-      app: {{ template "favorite-beer.name" . }}
-      release: {{ .Release.Name }}
-  ingress:
-  - ports:
-    - port: 8080
+  ingress: []
+# ---
+# apiVersion: networking.k8s.io/v1
+# kind: NetworkPolicy
+# metadata:
+#   name: {{ template "favorite-beer.fullname" . }}-redis
+# spec:
+#   podSelector:
+#     matchLabels:
+#       app: {{ template "favorite-beer.name" . }}-redis
+#       release: {{ .Release.Name }}
+#   policyTypes:
+#     - Ingress
+#   ingress:
+#     - from:
+#         - podSelector:
+#             matchLabels:
+#               app: {{ template "favorite-beer.name" . }}
+#               release: {{ .Release.Name }}
+#       ports:
+#         - protocol: TCP
+#           port: 6379
+# ---
+# kind: NetworkPolicy
+# apiVersion: networking.k8s.io/v1
+# metadata:
+#   name: {{ template "favorite-beer.fullname" . }}-allow-web
+# spec:
+#   podSelector:
+#     matchLabels:
+#       app: {{ template "favorite-beer.name" . }}
+#       release: {{ .Release.Name }}
+#   ingress:
+#   - ports:
+#     - port: 8080
