[skip ci] Lock it down.

--- a/spa-react-netcore-redis/voting/voting/k8s/Chart/templates/network-policy.yaml
+++ b/spa-react-netcore-redis/voting/voting/k8s/Chart/templates/network-policy.yaml
@@ -4,9 +4,7 @@ kind: NetworkPolicy
 metadata:
   name: {{ .Release.Name }}-default-deny-ingress
 spec:
-  podSelector:
-    matchLabels:
-      release: {{ .Release.Name }}
+  podSelector: {}
   policyTypes:
   - Ingress
   ingress: []
